# semantic-search

./: API_EMBEDDER_GUIDE.md  Cargo.toml  EXAMPLES.md  README.md
.github/workflows/: ci.yaml  release.yml
ck-cli/: Cargo.toml
ck-cli/src/: main.rs
ck-embed/: Cargo.toml
ck-embed/src/: lib.rs
